tempcompass_MCQ_YorN

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,12 +45,14 @@
                 "Blink",
                 "HICO",
                 "--model",
-                "Qwen2-VL-2B-Instruct",
+                // "Janus-Pro-7B",
+                // "Qwen2-VL-2B-Instruct",
                 "Qwen2.5-VL-3B",
-                "InternVL2_5-2B",
+                // "InternVL2_5-2B",
                 "--verbose",
                 "--mode",
-                "all"
+                "all",
+                "--reuse"
             ]
         },
         {
@@ -62,11 +64,13 @@
             "justMyCode": false,
             "args": [
                 "--data",
-                "TempCompass_MCQ_8frame",
-                "Virat_MCQ",
+                "TempCompass_MCQ_YorN_1fps",
+                // "Virat_MCQ",
                 "--model",
                 "Qwen2.5-VL-7B",
-                "Qwen2.5-VL-3B",
+                // "Qwen2.5-VL-3B",
+                "VideoLLaMA3-2B",
+                "VideoLLaMA3-7B",
                 "--verbose",
                 "--mode",
                 "all",
@@ -89,6 +93,39 @@
                 "--mode",
                 "all"
             ]
-        }
+        },        
+        {
+            "name": "Test report",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "custom/generate_test_report.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "--base_models",
+                // "InternVL2_5",
+                // "MiniCPM-V-2_6",
+                // "Llama-3-VILA1.5-8b",
+                // "llava_next_llama3",
+                // "Phi-3.5-Vision",
+                // "Qwen2-VL",
+                // "Qwen2.5-VL",                
+                // "VideoLLaMA3",
+                // "Janus-Pro",
+                "Qwen2.5-VL",                
+                "VideoLLaMA3",                
+                "--data",
+                "Virat_MCQ",
+                // "MMStar",
+                // "BLINK",
+                // "MMBench_DEV_EN",
+                // "RealWorldQA",
+                // "HallusionBench",
+                // "POPE",
+                // "MME",                
+                "--report_name",
+                "standard_test_report"
+            ]
+        },
     ]
 }
